<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/resultInfoTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="100dp"
        android:fontFamily="Times New Roman"
        android:textAlignment="center"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/textRes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="Times New Roman"
        android:text="@string/res"
        android:textSize="25sp" />

    <Button
        android:id="@+id/reckBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:background="@color/colorPrimaryDark"
        android:onClick="giveResult"
        android:text="@string/bttn_name"
        android:textSize="20sp" />

    <Button
        android:id="@+id/returnButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="150dp"
        android:onClick="returnToLaunchActivity"
        android:text="@string/returnToLaunch"
        android:textSize="20sp"
        android:visibility="invisible" />
</FrameLayout>